[package]
name = "harvest"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.51"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.34.0"
dirs = "4.0.0"
reqwest = { version = "0.11.7", features = ["json"] }
rust_decimal = "1.18.0"
rust_decimal_macros = "1.18.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.72"
serde_url_params = "0.2.1"
serde_yaml = "0.8.21"
tokio = { version = "1.14.0", features = ["full"] }

[lib]
name = "harvest"
path = "src/lib.rs"

[[bin]]
name = "harvest"
path = "src/main.rs"
