[package]
name = "harvest"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.53"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.1.3"
dirs = "4.0.0"
reqwest = { version = "0.11.9", features = ["json"] }
rust_decimal = "1.21.0"
rust_decimal_macros = "1.21.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_url_params = "0.2.1"
serde_yaml = "0.8.23"
tokio = { version = "1.16.1", features = ["full"] }

[lib]
name = "harvest"
path = "src/lib.rs"

[[bin]]
name = "harvest"
path = "src/main.rs"
